<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGame">

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/start_new_game"
        app:layout_constraintBottom_toTopOf="@+id/join_text"
        app:layout_constraintEnd_toEndOf="@+id/join_text"
        app:layout_constraintStart_toStartOf="@+id/join_text" />

    <Button
        android:id="@+id/join_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="201dp"
        android:text="@string/join_existing_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/join_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_game_code"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/enter_code_edittext"
        app:layout_constraintEnd_toEndOf="@+id/enter_code_edittext"
        app:layout_constraintStart_toStartOf="@+id/enter_code_edittext" />

    <EditText
        android:id="@+id/enter_code_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/game_code"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/join_game_button"
        app:layout_constraintEnd_toEndOf="@+id/join_game_button"
        app:layout_constraintStart_toStartOf="@+id/join_game_button" />
</androidx.constraintlayout.widget.ConstraintLayout>